--- a/Kubernetes/Web/Docker/content/index.html
+++ b/Kubernetes/Web/Docker/content/index.html
@@ -8,8 +8,8 @@
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 40px;
-            color: #333;
-            background-color: #f4f4f4;
+            color: #fff; /* Changed text color to white for better contrast */
+            background-color: #333; /* Dark background color */
             text-align: center;
         }
         h1 {
@@ -36,7 +36,7 @@
         }
         #counter {
             font-size: 22px;
-            color: #888;
+            color: #fff; /* Updated to maintain visibility on the dark background */
         }
     </style>
 </head>
